adding login, jwt authentication