@@ -1,58 +1,65 @@
 package com.prm392.be.labverse.config;
 
-import jakarta.servlet.http.HttpServletRequest;
+import com.prm392.be.labverse.security.AuthEntryPointJwt;
+import com.prm392.be.labverse.security.AuthTokenFilter;
+import com.prm392.be.labverse.security.CustomAccessDeniedHandler;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
+@EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
-    private String[] publicEndpoints = {
-            "/api/accounts/register",
-    };
-
+    private final AuthEntryPointJwt jwtAuthenticationEntryPoint;
+    private final CustomAccessDeniedHandler customAccessDeniedHandler;
+    private final AuthTokenFilter authTokenFilter;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-//                .cors(corsConfig -> corsConfig.configurationSource(new CorsConfigurationSource() {
-//                    @Override
-//                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-//                        CorsConfiguration config = new CorsConfiguration();
-//                        config.setAllowedOrigins(getAllowCorsUrl());
-//                        config.setAllowedMethods(Collections.singletonList("*"));
-//                        config.setAllowedHeaders(Collections.singletonList("*"));
-//                        config.setExposedHeaders(Collections.singletonList("Authorization"));
-//                        config.setAllowCredentials(true);
-//                        return config;
-//                    }
-//                }))
-//                .exceptionHandling(exception -> exception
-//                        .authenticationEntryPoint(jwtAuthenticationEntryPoint) //unauthenticated request
-//                        .accessDeniedHandler(new CustomAccessDeniedHandler()) //unauthorized access
-//                )
+                .cors(cors -> cors.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOriginPatterns(List.of("*")); // cho phép mọi origin
+                    config.setAllowedMethods(List.of("*"));
+                    config.setAllowedHeaders(List.of("*"));
+                    config.setAllowCredentials(true);
+                    return config;
+                }))
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint(jwtAuthenticationEntryPoint) //unauthenticated request
+                        .accessDeniedHandler(customAccessDeniedHandler) //unauthorized access
+                )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) //make each request independently
                 .authorizeHttpRequests( //authorization in http url
                         request -> request
                                 //open public endpoints
-                                .requestMatchers(publicEndpoints).permitAll()
-                                //endpoints for user has role CAR_OWNER
-//
-//                                .requestMatchers("/car/operator/**").hasRole("OPERATOR")
+                                .requestMatchers(ApiEndpoint.PUBLIC_API).permitAll()
+//                                .requestMatchers("/api/auth/test").hasAuthority(ERole.INTERN.toString())
                                 .anyRequest().authenticated()
                 );
-
+        http.addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig)
+            throws Exception {
+        return authConfig.getAuthenticationManager();
     }
 
     @Bean
